Перенесен вызов базы данных в сервис для работы с валютой

--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "guzzlehttp/guzzle": "^7.3",
       "ext-simplexml": "*",
-      "ext-pdo": "*"
+      "ext-pdo": "*",
+      "ext-json": "*"
     }
 }
