1.Настроил автозагрузку 2.Отрефакторил фрон-контроллер 3.Исправил невозможность записи базу данных ,подписок на ежедневное получение USD 4.Отрефакторил неймспейсы 5.Доработал Cli

--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,13 @@
 {
-    "require": {
-        "guzzlehttp/guzzle": "^7.3",
-      "ext-simplexml": "*",
-      "ext-pdo": "*",
-      "ext-json": "*"
+  "autoload": {
+    "psr-4": {
+      "Bot\\": "Bot/"
     }
+  },
+  "require": {
+    "guzzlehttp/guzzle": "^7.3",
+    "ext-simplexml": "*",
+    "ext-pdo": "*",
+    "ext-json": "*"
+  }
 }
